[package]
name = "webauthn-core"
version = "0.5.0-dev"
authors = ["Azz <azz@valera.co>"]
edition = "2021"
description = "Webauthn Cryptographic Operation Handling"
repository = "https://github.com/valeralabs/webauthn"
readme = "README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[features]
default = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
webauthn-proto = { path = "../webauthn-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
base64 = "0.13"
thiserror = "1.0"
tracing = "0.1"
openssl = "0.10.41"
# We could consider replacing this with openssl rand.
rand = { version = "0.8" }
url = { version = "2", features = ["serde"] }
x509-parser = "0.13.0"
der-parser = "7.0.0"
compact_jwt = "0.2.3"
uuid = { version = "1", features = ["serde"] }
rkyv = { version = "0.7.39", features = ["validation", "uuid", "copy", "strict"] }
bytecheck = { version = "0.6.9", features = ["uuid"] }
serde_cbor_2 = "0.12.0-dev"

[dev-dependencies]
hex-literal = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
