[package]
name = "webauthn"
version = "0.5.0-dev"
authors = ["Azz <azz@valera.co>"]
edition = "2021"
description = "Webauthn Framework for Rust Web Servers"
repository = "https://github.com/valeralabs/webauthn"
readme = "../README.md"
keywords = ["webauthn", "authentication"]
categories = ["authentication", "web-programming"]
license = "MPL-2.0"

[package.metadata.docs.rs]
features = ["danger-allow-state-serialisation", "danger-user-presence-only-security-keys", "danger-credential-internals"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
danger-allow-state-serialisation = []
danger-credential-internals = []
danger-user-presence-only-security-keys = []

[dependencies]
webauthn-core = { version = "0.5.0-dev", path = "../webauthn-core" }
url = { version = "2", features = ["serde"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytecheck = { version = "0.6.9", features = ["uuid"] }
rkyv = { version = "0.7.39", features = ["validation", "uuid", "copy", "strict"] }
